# Backend/src/v1/swagger.json
@@ -325,6 +325,9 @@
                 },
                 "password": {
                     "type": "string"
+                },
+                "image": {
+                    "type": "string"
                 }
             }
         },
@@ -334,7 +337,16 @@
                 "title": {
                     "type": "string"
                 },
+                "image": {
+                    "type": "string"
+                },
+                "description": {
+                    "type": "string"
+                },
                 "author": {
+                    "type": "string"
+                },
+                "publisher": {
                     "type": "string"
                 },
                 "year": {
